# Checkmate-Escrow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_PR_GUIDE.md  DOUBLE_PAYOUT_ANALYSIS.md  FORMAL_VERIFICATION_CI_INTEGRATION.md  FORMAL_VERIFICATION_COMPLETE.md  FORMAL_VERIFICATION_COMPLETION_CHECKLIST.md  FORMAL_VERIFICATION_DELIVERABLES.md  FORMAL_VERIFICATION_DELIVERABLES.txt  FORMAL_VERIFICATION_HARNESS.md  FORMAL_VERIFICATION_IMPLEMENTATION.md  FORMAL_VERIFICATION_INDEX.md  FORMAL_VERIFICATION_MANIFEST.txt  FORMAL_VERIFICATION_QUICK_REFERENCE.md  FORMAL_VERIFICATION_README.md  FORMAL_VERIFICATION_RESULTS.md  FORMAL_VERIFICATION_SUMMARY.md  LICENSE  PR_TEMPLATE.md  README.md  formal-verification-harness-report.json  formal-verification-invariants.json  formal-verification-spec-part1.json  formal-verification-spec-part2.json  formal-verification-spec-part3.json  formal-verification-state-machine.json  formal-verification-summary.json  formal-verification-vulnerabilities.json  task1.md  violation_analysis_report.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  formal-verification.yml
docs/: architecture.md  deployment.md  formal-verification.md  repository-health-checklist.md
frontend/: package-lock.json  package.json
oracle-service/: Cargo.toml
oracle-service/src/: config.rs  dead_letter.rs  lib.rs  poller.rs  queue.rs  soroban_client.rs
oracle-service/src/oracle/: errors.rs  lichess_client.rs  mod.rs
scripts/: repository_health_check.sh
(+23 files in other folders)
